# mcp_browser_use

./: .claude.json  .gitignore  .mcp.json  .mcp_nix.json  .mcp_windows.json  DUCK_DEBUG_DEV_A.md  DUCK_DEBUG_DEV_B.md  DUCK_DEBUG_DEV_C.md  EXISTING_ISSUES.md  LOCK_DEBUG_SCENARIOS.md  LOCK_TEST_RESULTS.md  README.md  REFACTORING_COORDINATION.md  REFACTORING_DEV_A.md  REFACTORING_DEV_B.md  REFACTORING_DEV_C.md  SETUP_GUIDE.md  agent_config.yaml  fastagent.config.yaml  pyproject.toml  requirements.txt  start_mcp.bat
logs/: mcp_helper.log.2025-08-23  mcp_helper.log.2025-10-17
mcp_browser_use/: ChromeCustomProfileLoader.py  __main__.py
scripts/: setup_refactoring.py  test_coverage.sh
src/mcp_browser_use/: REFACTORING_COMPLETE.md  __init__.py  __main__.py  __main___backup.py  cleaners.py  constants.py  context.py  context_pack.py  helpers.py  helpers_context.py  trying_stuff_out_v2.py
src/mcp_browser_use/actions/: __init__.py  elements.py  extraction.py  keyboard.py  navigation.py  screenshots.py
src/mcp_browser_use/browser/: __init__.py  chrome.py  chrome_executable.py  chrome_launcher.py  chrome_process.py  devtools.py  driver.py  process.py
src/mcp_browser_use/camoufox/: __init__.py  engine.py
tests/: TESTING.md  _utils.py  test_chromedriver_log_cross_platform.py  test_cleaners_refactoring.py  test_context_integration.py  test_e2e_mcp_browser_use.py  test_main.py  test_mcp_browser_use.py
tests/tests_decorators/: test_decorators.py  test_ensure.py
tests/tests_e2e/: test_e2e_mcp_browser_use.py
tests/tests_other/: test_mcp_browser_use.py
(+22 files in other folders)
