[project]
name = "mcp_browser_use"
version = "0.1.0"
dependencies = [
  "annotated-types>=0.7.0",
  "attrs>=25.3.0",
  "certifi>=2025.1.31",
  "click>=8.1.8",
  "h11>=0.14.0",
  "idna>=3.10",
  "outcome>=1.3.0.post0",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "pydantic_core>=2.27.2",
  "PySocks>=1.7.1",
  "python-dotenv",
  "selenium>=4.30.0",
  "psutil",
  "beautifulsoup4",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
test = [
    "pytest", # We DO NOT want to use pytest-asyncio.
    "pytest-cov",
    "unittest-xml-reporting",
    "fast-agent-mcp",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
markers = [
    "asyncio: mark test as async",
    "slow: mark test as slow running",
    "e2e: mark test as end-to-end",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
